make a mock database config in applecation.prorerties

--- a/e_com/src/main/resources/application.properties
+++ b/e_com/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=e_com
 
 
 # Database PostgreSQL configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/e_com
-spring.datasource.username=postgres
-spring.datasource.password=0000
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
+spring.datasource.username=your_username
+spring.datasource.password=your_password
 
 # JPA and Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
